--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "name": "assistant-ui-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -56,4 +56,3 @@
     "typescript": "^5"
   }
 }
-"pnpm-lock.yaml"
